--- a/index.html
+++ b/index.html
@@ -1,4 +1,83 @@
----
-layout: home
-author_profile: true
----
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>JensMohrmann.de | Jens Mohrmann</title>
+
+	<link rel="icon" href="favicon.ico" type="image/png" />
+
+	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
+	<link rel="stylesheet" href="css/themes/grey-white.css">
+	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+</head>
+<body>
+	<main>
+		<div class="intro">Jens Mohrmann</div>
+		<div class="tagline">Physicist | Product Development Engineer</div>
+		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+		<div class="icons-social">
+      <a target="_blank" href="https://www.linkedin.com/in/jens-mohrmann/">
+        <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
+        <span class="sr-only">LinkedIn</span>
+      </a>
+			<a target="_blank" href="https://github.com/9x">
+        <i class="fab fa-github" aria-hidden="true" title="Github"></i>
+        <span class="sr-only">Github</span>
+      </a>
+      <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
+        <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
+        <span class="sr-only">Twitter</span>
+      </a>
+      <a target="_blank" href="https://dev.to/flexdinesh">
+        <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
+        <span class="sr-only">DEV Community</span>
+      </a>
+      <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
+        <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
+        <span class="sr-only">StackOverflow</span>
+      </a> -->
+      <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
+        <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
+        <span class="sr-only">Medium</span>
+      </a> -->
+      <!-- <a target="_blank" href="https://www.freecodecamp.org">
+        <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
+        <span class="sr-only">FreeCodeCamp</span>
+      </a> -->
+      <!-- <a target="_blank" href="https://www.behance.net">
+        <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
+        <span class="sr-only">Behance</span>
+      </a> -->
+      <!-- <a target="_blank" href="https://codepen.io">
+        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
+        <span class="sr-only">CodePen</span>
+      </a> -->
+      <a target="_blank" href="https://www.facebook.com/jens.mohrmann">
+        <i class="fab fa-facebook" aria-hidden="true" title="facebook"></i>
+        <span class="sr-only">facebook</span>
+      </a>
+      <a target="_blank" href="https://www.instagram.com/jens.mohrmann/">
+        <i class="fab fa-instagram" aria-hidden="true" title="instagram"></i>
+        <span class="sr-only">instagram</span>
+      </a>
+      <a target="_blank" href="https://www.youtube.com/channel/UC_GQKt9lWQGibuskX1bpc-w">
+        <i class="fab fa-youtube" aria-hidden="true" title="YouTube"></i>
+        <span class="sr-only">YouTube</span>
+      </a>
+    </div>
+	</main>
+</body>
+</html>
