--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>JensMohrmann.de | Dr. Jens Mohrmann</title>
+	<title>Dr. Jens Mohrmann</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -13,10 +13,11 @@
 	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/themes/jmde.css">
 	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<link rel="stylesheet" href="css/themes/grey-white.css">
+	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
@@ -25,7 +26,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Jens Mohrmann</div>
+		<div class="intro">Dr. Jens Mohrmann</div>
 		<div class="tagline">Physicist | Product Development Engineer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
