add background effect

--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/themes/jmde.css">
-	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
+
+  <div id="particles-js"></div>
+  <div id="bg"></div>
 	<main>
+    
 		<div class="intro">Dr. Jens Mohrmann</div>
 		<div class="tagline">Physicist | Product Development Engineer</div>
-		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
+      <a href="mailto:(Dr. Jens Mohrmann)mailjensmohrmannde?subject=Please add @ and . in adress">
+        <b style="padding: 10px; font-size: 3em; font-weight:bolder;font-family: 'Funnel Sans', sans-serif;" aria-hidden="true" title="Email">@</b>
+        <span class="sr-only">Email</span>
+      </a>
       <a target="_blank" href="https://www.linkedin.com/in/jens-mohrmann/">
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
@@ -38,34 +36,6 @@
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
-      <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
-        <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
-        <span class="sr-only">Twitter</span>
-      </a>
-      <a target="_blank" href="https://dev.to/flexdinesh">
-        <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
-        <span class="sr-only">DEV Community</span>
-      </a>
-      <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
-        <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
-        <span class="sr-only">StackOverflow</span>
-      </a> -->
-      <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
-        <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
-        <span class="sr-only">Medium</span>
-      </a> -->
-      <!-- <a target="_blank" href="https://www.freecodecamp.org">
-        <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
-        <span class="sr-only">FreeCodeCamp</span>
-      </a> -->
-      <!-- <a target="_blank" href="https://www.behance.net">
-        <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
-        <span class="sr-only">Behance</span>
-      </a> -->
-      <!-- <a target="_blank" href="https://codepen.io">
-        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
-        <span class="sr-only">CodePen</span>
-      </a> -->
       <a target="_blank" href="https://www.facebook.com/jens.mohrmann">
         <i class="fab fa-facebook" aria-hidden="true" title="facebook"></i>
         <span class="sr-only">facebook</span>
@@ -79,6 +49,8 @@
         <span class="sr-only">YouTube</span>
       </a>
     </div>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 	</main>
 </body>
 </html>
