--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <div id="particles-js"></div>
+  <div id="particles-js" style="position:fixed"></div>
   <div id="bg"></div>
 	<main>
     
