--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <div id="particles-js" style="position:fixed"></div>
+  <!-- <div id="particles-js" style="position:fixed"></div> -->
   <div id="bg"></div>
 	<main>
     
@@ -49,8 +49,8 @@
         <span class="sr-only">YouTube</span>
       </a>
     </div>
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/particles.js"></script> -->
+    <!-- <script src="js/app.js"></script> -->
 	</main>
 </body>
 </html>
